Fixed table overflow

--- a/src/app/task-manager/task-manager.component.scss
+++ b/src/app/task-manager/task-manager.component.scss
@@ -35,6 +35,10 @@
     align-items: center;
 }
 
+.remove-start-padding {
+    padding-left: 0px !important;
+}
+
 .remove-end-padding {
     padding-right: 0px !important;
 }
